name:           longboye
version:        0.1.0.0
category:       Web
homepage:       https://github.com/superpowerscorp/longboye#readme
bug-reports:    https://github.com/superpowerscorp/longboye/issues
author:         John Evans
maintainer:     ops@superpowerscorp.com
copyright:      2017 Superpowers Corp
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/superpowerscorp/longboye

library
  hs-source-dirs:   src test
  ghc-options:      -Wall -Werror
  build-depends:    Cabal
                  , QuickCheck
                  , ansi-wl-pprint
                  , base >=4.7 && <5
                  , containers
                  , directory
                  , docopt
                  , filepath
                  , haskell-src-exts
                  , haskell-src-exts-prisms
                  , hspec
                  , lens
                  , megaparsec
                  , optparse-applicative
                  , protolude
                  , quickcheck-text
                  , safe
                  , streaming
                  , system-fileio
                  , text
                  , unix
  exposed-modules:  Longboye
                  , LB20
                  , LB20.Imports
                  , LB20.Lenses
                  , LB20.Pragmas
  other-modules:    Debug
                  , Longboye.Common
                  , Longboye.Errors
                  , Longboye.Extensions
                  , Longboye.Files
                  , Longboye.Import
                  , Longboye.Imports
                  , Longboye.ImportsParser
                  , Longboye.Main
                  , Longboye.Member
                  , Longboye.ModuleStatement
                  , Longboye.ModuleStatementParser
                  , Longboye.ModuleStatements
                  , Longboye.Pragmas
                  , Longboye.PragmasParser
                  , Longboye.Prelude
                    Streaming.Files
  default-language: Haskell2010

executable longboye
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:    ansi-wl-pprint
                  , base
                  , lens
                  , longboye
                  , optparse-applicative
                  , streaming
  default-language: Haskell2010

test-suite longboye-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   src test
  ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:    Cabal
                  , QuickCheck
                  , ansi-wl-pprint
                  , base
                  , containers
                  , directory
                  , filepath
                  , haskell-src-exts
                  , haskell-src-exts-prisms
                  , hspec
                  , lens
                  , longboye
                  , optparse-applicative
                  , protolude
                  , quickcheck-text
                  , safe
                  , streaming
                  , text
                  , unix
  other-modules:    Debug
                  , LB20Spec
                  , LB20
                  , LB20.Imports
                  , LB20.Lenses
                  , LB20.Pragmas
                  , Longboye
                  , Longboye.Common
                  , Longboye.Errors
                  , Longboye.Extensions
                  , Longboye.Files
                  , Longboye.Import
                  , Longboye.Imports
                  , Longboye.ImportsParser
                  , Longboye.Main
                  , Longboye.Member
                  , Longboye.ModuleStatement
                  , Longboye.ModuleStatementParser
                  , Longboye.ModuleStatements
                  , Longboye.Pragmas
                  , Longboye.PragmasParser
                  , Longboye.Prelude
                  , Longboye.Import.Arbitrary
                  , Longboye.Member.Arbitrary
                  , ImportsSpec
                  , ModuleStatementsSpec
                  , PragmasSpec
                  , Streaming.Files
  default-language: Haskell2010
